--- a/src/components/Pages/Search/Search.css
+++ b/src/components/Pages/Search/Search.css
@@ -57,3 +57,15 @@
     width: 40%;
     margin-left: 2%;
 }
+
+.modalBox {
+   width: 50%;
+}
+
+.formspreeForm{
+    vertical-align: top;
+    position: relative;
+    top: 15rem;
+    left: 27rem;
+    background-color: rgba(105, 48, 67, 0.767);
+}
