--- a/src/components/Pages/Search/Search.css
+++ b/src/components/Pages/Search/Search.css
@@ -59,13 +59,39 @@
 }
 
 .modalBox {
-   width: 50%;
+   width: 30%;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
 }
 
 .formspreeForm{
-    vertical-align: top;
     position: relative;
     top: 15rem;
-    left: 27rem;
-    background-color: rgba(105, 48, 67, 0.767);
+    left: 35rem;
+    background-color: rgba(99, 34, 99, 0.849);
+    padding: 1rem;
+}
+
+.nameInput {
+    display: block;
+   width: 100%;
+}
+
+.emailInput {
+    display: block;
+    width: 100%;
+}
+
+.foundMatch {
+    display: block;
+    width: 30rem;
+    height: 20rem;
+    max-height: 20rem;
+    max-width: 30rem;
+}
+
+.formButtons{
+    padding: 1rem;
+    width: 50%;
 }
