--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,11 @@
-body {
-  padding-top: 5rem;
-}
-.starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
-}
+
+/*.starter-template {*/
+  /*padding: 3rem 1.5rem;*/
+  /*text-align: center;*/
+/*}*/
+
+
+
+/* left jumbotron image */
+
+
