--- a/src/components/Pages/PostPage/PostPage.css
+++ b/src/components/Pages/PostPage/PostPage.css
@@ -1,8 +1,25 @@
 .PostPage {
-
+display: flex;
+position: relative;
+left: 40rem;
+top: 8rem;
 }
 
 .PostPage img {
 max-width: 400px;
 max-height: 400px;
+}
+
+#dropZone {
+    width: 300px;
+    height: 205px;
+}
+
+.button {
+    display: inline;
+    width: 50%;
+}
+
+.perfectMatch {
+    width: 100%;
 }
