--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,3 +1,11 @@
+.Home {
+    /*margin-top: 900px;*/
+    background-image: url(/image/bg-doggies.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+}
+
 .Home .placeHome {
     background-image: url(/image/pickme.jpg);
     background-size: cover;
@@ -8,6 +16,9 @@
     width: 100%;
     align-content: space-around;
 }
+
+
+
 /* right jumbotron image */
 .Home .findDog {
     background-image: url(/image/searching.jpg);
@@ -53,7 +64,7 @@
     color: whitesmoke;
 }
 
-.Home .container-home {
+.container-home {
     margin-top: -900px;
     padding-top: 24px;
     padding: 0 !important;
