--- a/src/components/Pages/PostPage/PostPage.css
+++ b/src/components/Pages/PostPage/PostPage.css
@@ -1,18 +1,33 @@
 .PostPage {
 display: flex;
 position: relative;
-left: 40rem;
-top: 8rem;
+left: 30%;
+top: 4rem;
+align-content: center;
+text-align: center;
 }
 
 .PostPage img {
-max-width: 400px;
-max-height: 400px;
+max-width: 300px;
+max-height: 205px;
 }
 
-#dropZone {
+.dropZone {
     width: 300px;
     height: 205px;
+    border-style: dotted;
+    text-align: center;
+    margin-left: 28%;
+}
+
+.dropText {
+    margin-top: 30%;
+}
+
+.PostPage .titleDrop {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 2%;
 }
 
 .button {
@@ -21,5 +36,14 @@ max-height: 400px;
 }
 
 .perfectMatch {
+    width: 100%;
+}
+
+.inputBox {
+    margin-bottom: 1rem;
+    width: 100%;
+}
+.email {
+    margin-bottom: 1rem;
     width: 100%;
 }
