Seatch and petCard

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
   /*color:rgba(99, 34, 99, 0.849);*/
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+/*code {*/
+  /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",*/
+    /*monospace;*/
+/*}*/
 
 
