added a dummy sign-in page

--- a/src/components/Pages/Search/Search.css
+++ b/src/components/Pages/Search/Search.css
@@ -22,7 +22,8 @@
 .flex {
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    /* justify-content: center;
+    align-content: center; */
 }
 
 #searchForm {
