--- a/src/components/Pages/PostPage/PostPage.css
+++ b/src/components/Pages/PostPage/PostPage.css
@@ -1,10 +1,11 @@
 .PostPage {
-display: flex;
-position: relative;
-left: 35%;
-top: 4rem;
-align-content: center;
-width: 70%;
+    display: flex;
+    align-content: center;
+    width: 50%;
+    margin: auto;
+    background: rgba(99,34,99,.849);
+    color: white;
+    padding: 1%;
 }
 
 .PostPage img {
@@ -27,7 +28,6 @@ max-height: 205px;
 
 .button {
     display: inline;
-    width: 50%;
     position: relative;
     left: 5rem;
 }
